--- a/index.html
+++ b/index.html
@@ -16,41 +16,93 @@
         </div>
 
         <form id="quiz-form">
-            <!-- Section 1: Self-Assessment Questions -->
-            <h2>Self-Assessment Questions</h2>
-            <!-- Existing questions 1 to 6 -->
-            <!-- (unchanged code for questions 1 to 6) -->
+           <div class="question" id="question1">
+                <p>1. Are you feeling overwhelmed or stressed recently?</p>
+                <label><input type="radio" name="q1" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q1" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q1" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q1" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q1" value="5"> 5 - Always</label><br>
+            </div>
 
-            <!-- New questions (7 to 11) -->
+            <div class="question" id="question2">
+                <p>2. Do you have trouble sleeping or experience changes in appetite?</p>
+                <label><input type="radio" name="q2" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q2" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q2" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q2" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q2" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question3">
+                <p>3. Have you been feeling sad, hopeless, or down for an extended period?</p>
+                <label><input type="radio" name="q3" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q3" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q3" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q3" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q3" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question4">
+                <p>4. Do you feel anxious or worried frequently, even in the absence of a clear cause?</p>
+                <label><input type="radio" name="q4" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q4" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q4" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q4" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q4" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question5">
+                <p>5. Have you noticed changes in your behavior, such as withdrawing from friends or activities you once enjoyed?</p>
+                <label><input type="radio" name="q5" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q5" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q5" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q5" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q5" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question6">
+                <p>6. Have you had thoughts of harming yourself or others?</p>
+                <label><input type="radio" name="q6" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q6" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q6" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q6" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q6" value="5"> 5 - Always</label><br>
+            </div>
+
+            <!-- Section 2: Mental Health Condition Awareness -->
+            <h2>Mental Health Condition Awareness</h2>
             <div class="question" id="question7">
-                <p>7. Have you been feeling more irritable or easily frustrated lately?</p>
-                <label><input type="radio" name="q7" value="1"> 1 - Not at all</label><br>
-                <label><input type="radio" name="q7" value="2"> 2 - Occasionally</label><br>
-                <label><input type="radio" name="q7" value="3"> 3 - Sometimes</label><br>
-                <label><input type="radio" name="q7" value="4"> 4 - Frequently</label><br>
-                <label><input type="radio" name="q7" value="5"> 5 - Always</label><br>
+                <p>7. What are the signs and symptoms of depression/anxiety?</p>
+                <label><input type="radio" name="q7" value="1"> 1 - I don’t know</label><br>
+                <label><input type="radio" name="q7" value="2"> 2 - I have a basic understanding</label><br>
+                <label><input type="radio" name="q7" value="3"> 3 - I have a moderate understanding</label><br>
+                <label><input type="radio" name="q7" value="4"> 4 - I know quite a bit</label><br>
+                <label><input type="radio" name="q7" value="5"> 5 - I know a lot</label><br>
             </div>
 
             <div class="question" id="question8">
-                <p>8. Do you feel a lack of motivation to engage in daily activities?</p>
-                <label><input type="radio" name="q8" value="1"> 1 - Not at all</label><br>
-                <label><input type="radio" name="q8" value="2"> 2 - Occasionally</label><br>
-                <label><input type="radio" name="q8" value="3"> 3 - Sometimes</label><br>
-                <label><input type="radio" name="q8" value="4"> 4 - Frequently</label><br>
-                <label><input type="radio" name="q8" value="5"> 5 - Always</label><br>
+                <p>8. How can I identify a panic attack and what should I do if I have one?</p>
+                <label><input type="radio" name="q8" value="1"> 1 - I don’t know</label><br>
+                <label><input type="radio" name="q8" value="2"> 2 - I have a basic understanding</label><br>
+                <label><input type="radio" name="q8" value="3"> 3 - I have a moderate understanding</label><br>
+                <label><input type="radio" name="q8" value="4"> 4 - I know quite a bit</label><br>
+                <label><input type="radio" name="q8" value="5"> 5 - I know a lot</label><br>
             </div>
 
             <div class="question" id="question9">
-                <p>9. Are you finding it hard to concentrate or focus on tasks?</p>
-                <label><input type="radio" name="q9" value="1"> 1 - Not at all</label><br>
-                <label><input type="radio" name="q9" value="2"> 2 - Occasionally</label><br>
-                <label><input type="radio" name="q9" value="3"> 3 - Sometimes</label><br>
-                <label><input type="radio" name="q9" value="4"> 4 - Frequently</label><br>
-                <label><input type="radio" name="q9" value="5"> 5 - Always</label><br>
+                <p>9. What are the common symptoms of PTSD or OCD?</p>
+                <label><input type="radio" name="q9" value="1"> 1 - I don’t know</label><br>
+                <label><input type="radio" name="q9" value="2"> 2 - I have a basic understanding</label><br>
+                <label><input type="radio" name="q9" value="3"> 3 - I have a moderate understanding</label><br>
+                <label><input type="radio" name="q9" value="4"> 4 - I know quite a bit</label><br>
+                <label><input type="radio" name="q9" value="5"> 5 - I know a lot</label><br>
             </div>
 
+            <!-- Section 3: Seeking Help and Support -->
+            <h2>Seeking Help and Support</h2>
             <div class="question" id="question10">
-                <p>10. Have you been experiencing physical symptoms like headaches or muscle tension due to stress?</p>
+                <p>10. Do you know where to seek professional help, such as therapy or counseling?</p>
                 <label><input type="radio" name="q10" value="1"> 1 - Not at all</label><br>
                 <label><input type="radio" name="q10" value="2"> 2 - Occasionally</label><br>
                 <label><input type="radio" name="q10" value="3"> 3 - Sometimes</label><br>
@@ -59,7 +111,7 @@
             </div>
 
             <div class="question" id="question11">
-                <p>11. Do you feel disconnected from your support system, like friends or family?</p>
+                <p>11. Are you aware of the different types of mental health professionals (therapists, psychologists, psychiatrists)?</p>
                 <label><input type="radio" name="q11" value="1"> 1 - Not at all</label><br>
                 <label><input type="radio" name="q11" value="2"> 2 - Occasionally</label><br>
                 <label><input type="radio" name="q11" value="3"> 3 - Sometimes</label><br>
@@ -67,14 +119,94 @@
                 <label><input type="radio" name="q11" value="5"> 5 - Always</label><br>
             </div>
 
-            <!-- Section 2: Mental Health Condition Awareness -->
-            <!-- Existing questions (12 to 15) -->
-            <!-- (unchanged code for questions 12 to 15) -->
+            <!-- Section 4: Coping Strategies -->
+            <h2>Coping Strategies</h2>
+            <div class="question" id="question12">
+                <p>12. What strategies have you tried to manage your stress or anxiety?</p>
+                <label><input type="radio" name="q12" value="1"> 1 - None</label><br>
+                <label><input type="radio" name="q12" value="2"> 2 - A few</label><br>
+                <label><input type="radio" name="q12" value="3"> 3 - Some</label><br>
+                <label><input type="radio" name="q12" value="4"> 4 - Many</label><br>
+                <label><input type="radio" name="q12" value="5"> 5 - A lot</label><br>
+            </div>
 
-            <button type="submit" id="submit-btn">Submit</button>
+            <div class="question" id="question13">
+                <p>13. Have you considered mindfulness, meditation, or breathing exercises as a way to reduce stress?</p>
+                <label><input type="radio" name="q13" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q13" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q13" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q13" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q13" value="5"> 5 - Always</label><br>
+            </div>
+
+            <!-- Section 5: Resources and Information -->
+            <h2>Resources and Information</h2>
+            <div class="question" id="question14">
+                <p>14. Would you like to learn more about mental health disorders and treatment options?</p>
+                <label><input type="radio" name="q14" value="1"> 1 - Not interested</label><br>
+                <label><input type="radio" name="q14" value="2"> 2 - Somewhat interested</label><br>
+                <label><input type="radio" name="q14" value="3"> 3 - Neutral</label><br>
+                <label><input type="radio" name="q14" value="4"> 4 - Interested</label><br>
+                <label><input type="radio" name="q14" value="5"> 5 - Very interested</label><br>
+            </div>
+
+            <div class="question" id="question15">
+                <p>15. Are you interested in online therapy or mental health apps?</p>
+                <label><input type="radio" name="q15" value="1"> 1 - Not interested</label><br>
+                <label><input type="radio" name="q15" value="2"> 2 - Somewhat interested</label><br>
+                <label><input type="radio" name="q15" value="3"> 3 - Neutral</label><br>
+                <label><input type="radio" name="q15" value="4"> 4 - Interested</label><br>
+                <label><input type="radio" name="q15" value="5"> 5 - Very interested</label><br>
+            </div>
+
+            
+            <div class="question" id="question7">
+                <p>16. Have you been feeling more irritable or easily frustrated lately?</p>
+                <label><input type="radio" name="q7" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q7" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q7" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q7" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q7" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question8">
+                <p>17. Do you feel a lack of motivation to engage in daily activities?</p>
+                <label><input type="radio" name="q8" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q8" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q8" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q8" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q8" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question9">
+                <p>18. Are you finding it hard to concentrate or focus on tasks?</p>
+                <label><input type="radio" name="q9" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q9" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q9" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q9" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q9" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question10">
+                <p>19. Have you been experiencing physical symptoms like headaches or muscle tension due to stress?</p>
+                <label><input type="radio" name="q10" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q10" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q10" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q10" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q10" value="5"> 5 - Always</label><br>
+            </div>
+
+            <div class="question" id="question11">
+                <p>20. Do you feel disconnected from your support system, like friends or family?</p>
+                <label><input type="radio" name="q11" value="1"> 1 - Not at all</label><br>
+                <label><input type="radio" name="q11" value="2"> 2 - Occasionally</label><br>
+                <label><input type="radio" name="q11" value="3"> 3 - Sometimes</label><br>
+                <label><input type="radio" name="q11" value="4"> 4 - Frequently</label><br>
+                <label><input type="radio" name="q11" value="5"> 5 - Always</label><br>
+            </div>
+  <button type="submit" id="submit-btn">Submit</button>
         </form>
     </div>
-
     <script src="script.js"></script> <!-- Link to JavaScript -->
 </body>
 </html>
